# airda

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  airda.cabal
app/: Args.hs  Help.hs  Keywords.hs  Lexer.hs  LexerTypes.hs  Main.hs
app/parser/: Error.hs  Expression.hs  Parser.hs  ParserTypes.hs
doc/: grammar.ebnf  spec.md
example/: airda.tree  ex.airda  ex2.airda  example.airda
src/: AST.hs  Error.hs  Expression.hs  Keywords.hs  Lexer.hs  LexerTypes.hs  Operators.hs  Parser.hs  ParserState.hs  ParserTypes.hs  Primitives.hs
src/expr/: Expression.hs  UnaryExpression.hs  ValueExpression.hs
src/parser/: Expression.hs  Parser.hs  ParserState.hs
