cabal-version:      2.4
name:               airda
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: The Airda programming language.

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license: MIT
author:             luv4bytes

extra-source-files: CHANGELOG.md

executable airda
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: LexerTypes
                   Lexer
                   Parser
                   ParserTypes
                   Keywords
                   Expression
                   Error
                   Args
                   Help

    ghc-options:

    build-depends:    base ^>=4.15.1.0, directory, time
    hs-source-dirs:   app app/parser
    default-language: Haskell2010
