cabal-version:      2.4
name:               airda
version:            0.1.0.0
build-type:         Simple

-- A short (one-line) description of the package.
synopsis: The Airda programming language.

-- A longer description of the package.
description: Airda is a simple interpreted procedural programming language.

-- The license under which the package is released.
license:            MIT
author:             luv4bytes

extra-source-files: CHANGELOG.md

executable airda
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Args
                   Help

    ghc-options: -dynamic

    build-depends:    base ^>=4.15.1.0, directory, time, libairda
    hs-source-dirs:   app
    default-language: Haskell2010

library libairda
    exposed-modules:  Lexer,
                      LexerTypes,
                      Parser, 
                      ParserTypes, 
                      Error, 
                      Expression, 
                      UnaryExpression, 
                      ValueExpression,
                      Operators,
                      Keywords

    -- Modules included in this library but not exported.
    other-modules:

    ghc-options: -dynamic -fPIC

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   src, src/expr
    default-language: Haskell2010